# PaiCLI

./: .env.example  .gitignore  README.md  pyproject.toml
paicli/: __init__.py
paicli/agent/: __init__.py  agent.py  agent_message.py  agent_orchestrator.py  agent_role.py  browser_prompt.py  execution_step.py  plan_execute_agent.py  sub_agent.py
paicli/cli/: main.py
paicli/hitl/: __init__.py  handler.py  policy.py  request.py  result.py
paicli/llm/: glm_client.py
paicli/mcp/: __init__.py  audit.py  browser_session.py  client.py  config.py  manager.py  schema.py  tool_provider.py  transport.py
paicli/memory/: __init__.py  entry.py  manager.py
paicli/plan/: __init__.py  execution_plan.py  planner.py  task.py
paicli/rag/: __init__.py  analyzer.py  chunker.py  embedding.py  formatter.py  index.py  models.py  retriever.py  store.py
paicli/skill/: __init__.py  buffer.py  (+3 more)
tests/: test_agent.py  test_approval_request.py  test_browser_guard.py  test_browser_session.py  test_cli.py  test_code_analyzer.py  test_code_index.py  test_code_retriever.py  test_context_compressor.py  test_conversation_memory.py  test_embedding_client.py  test_glm_client.py  test_hitl_policy.py  test_hitl_result.py  test_hitl_tool_registry.py  test_long_term_memory.py  test_mcp.py  test_memory_entry.py  test_memory_manager.py  test_memory_retriever.py  test_multi_agent.py  test_plan_execute_agent.py  test_planner.py  test_rag_chunker.py  test_search_result_formatter.py  test_skill.py  test_task_model.py  test_token_budget.py  test_tool_registry.py  test_vector_store.py  test_web.py
(+17 files in other folders)
