[project]
name = "paicli"
version = "0.1.0"
description = "A Python CLI agent with ReAct, planning, memory, RAG, multi-agent orchestration, and HITL approval."
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
paicli = "paicli.cli.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paicli*"]
